--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy-gh-pages": "gh-pages -d dist",
+    "deploy-vercel": "vercel --prod"
   },
   "devDependencies": {
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "lil-gui": "^0.19.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "vercel": "^32.5.4"
   }
 }
